[package]
name = "poker_reloaded"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.3.3"
axum = { version = "0.6.20", features = ["ws", "headers", "tokio"] }
chashmap = "2.2.2"
dotenv = "0.15.0"
eyre = "0.6.8"
# axum-extra = { version = "0.7.7", features = ["typed-header"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hapi-iron-oxide = "0.1.0"
headers = "0.3"
lazy_static = "1.4.0"
rs_poker = "2.0.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-tungstenite = "0.20"
env_logger = "*"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
test-log = { version = "0.2.12" , features = ["trace"]}
